test/asm/charmap-empty.err
error: Cannot map an empty string
    at charmap-empty.asm(1)
error: syntax error, unexpected end of line
    at charmap-empty.asm(2)
Assembly aborted with 2 errors!
